2023-10-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* snapshots.desc/aarch64-unknown-freebsd13.2.desc:
	  Description for Debian GNU/Linux on powerpc64 snapshots.

2023-08-17 Benedikt Freisen <b.freisen AT gmx.net>

	* snapshots.desc/docs.desc:
	  Improve description of documentation snapshots.

2023-08-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* snapshots.desc/aarch64-unknown-freebsd13.2.desc:
	  Description for FreeBSD 13.2 on aarch64 snapshots.

2023-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Announce SDCC 4.3.0.

2023-06-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php,
	  previous.php:
	  Announce SDCC 4.3.0 RC1.

2023-05-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* images/sdcc.svg,
	  index.php,
	  links.php,
	  previous.php,
	  regtests.php,
	  snap_header.php:
	  Use new SDCC logo as favicon.

2023-01-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* Add missing closing parenthesis

2023-01-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* snap.php: don't misrecognize lines beginning with
	  numbers as failure counts

2022-11-13 Philipp Klaus Krause <pkk AT spth.de>

	* snapshots.desc/aarch64-linux-gnu.desc:
	  Description for Debian GNU/Linux on AArch 64 machine.

2020-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* snapshots.desc:
	  Bring compile farm machine descriptions into repo.

2022-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Announce SDCC 4.2.0 release.

2022-02-28 Philipp Klaus Krause <pkk AT spth.de>

	* index.php,
	  previous.php:
	  Added News - SDCC 4.2.0 RC2,
	  updated decription.

2022-02-22 Philipp Klaus Krause <pkk AT spth.de>

	* index.php:
	  Added News - SDCC 4.2.0 RC1.

2021-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* links.php:
	  The GameBoy's CPU core is the SM83, also used in some Sharp microcontrollers.

2021-03-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* index.php: NEWS: 4.1.0 released
